fixed Button alignment

--- a/electron-vite-project/src/Studio.css
+++ b/electron-vite-project/src/Studio.css
@@ -70,8 +70,8 @@
 }
 
 .buttonBigView {
-    width: 35px;
-    height: 35px;
+    width: 36px;
+    height: 36px;
     border-radius: 50%;
     position: absolute;
     right: 10px;
