--- a/electron-vite-project/src/components/BigView.css
+++ b/electron-vite-project/src/components/BigView.css
@@ -22,7 +22,6 @@
     border-radius: 10px;
     background-color: var(--fillMedium);
     color: var(--primary);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     -webkit-backdrop-filter: var(--windowBackdrop);
     backdrop-filter: var(--windowBackdrop);
     border: var(--onepStroke) 1px solid;
